@@ -1,3 +1,8 @@
+Mon Jul  5 01:20:17  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
+
+	* lib/drb/drb.rb(DRbConn self.open): If socket pool is full, close
+	  the socket whose last-access-time is oldest. (and add new one)
+
 Sun Jul  4 12:24:50 2004  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rss/rss.rb: added copyright header.
